# ml-logger

./: Makefile  README  pyproject.toml
ml_logger/: log_client.py
ml_logger_tests/: test_ml_logger.py  test_pytorch_methods.py
